# emt_variable_binding

./: .gitignore  README.md  analyze.py  analyze_diagnostics.py  demo_rcopy.ipynb  demo_rcopy_infinite_horizon.py  demo_rcopy_variable.py  diagnostic_test.py  environment.yml  evaluate.py  evaluate_rcopy.py  fixed_point.py  pca_signatures.py  pca_signatures_enhanced.py  plot_tensorboard_events.py  procrustes_analysis.py  pyproject.toml  requirements.txt  run_batch.sh  setup.py  train.py
analysis/: __init__.py  dimensionality_reduction.py  distance_metrics.py  eigenvalue_analysis.py  persistent_homology.py  requirements.txt  visualization.py
em_discrete/dataset/: simpleIOPhaseDynamicalSystem.py
em_discrete/models/: S4_layer.py  __init__.py  lstm_model.py  polyEpisodicHopfield.py  polyEpisodicHopfieldwDelay.py  rnn_model.py  s4_model.py
em_discrete/tasks/: __init__.py  binary_arithmetic.py  binary_compose_copy.py  binary_compose_copy_1mix.py  binary_compose_copy_2mix.py  binary_fibonacci_numbers.py  binary_fibonacci_numbers_v12.py  binary_linearVB.py  binary_logic.py  compose_copy_phases.py  copying_memory.py  game_of_life.py  game_of_life_scanning.py  infinite_horizon_vb.py  repeat_copy.py  tfa.py  variable_linear_vb.py
em_discrete/utils/: result_handling.py
emt-tools/: LICENSE  README.md  setup.py
emt-tools/emt_tools/: utils.py
examples/: example_persistent_homology.py
experiments_public/1_rcopy/: 1_0_repeat_copy.py
mathematica_notes/: concave_convex_procedure.nb
tex_notes/: energy_derivations.tex  episodic_memory_theory_rnn.tex
(+8 files in other folders)
